css/styles.css
/* background css */
* {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: 0;
}

.top-rip {
  position: fixed;
}

.bottom-rip {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  text-align: center;
  position: relative;
  /* z-index: -2; */
}

/* Logo/ Nav css */
header {
  position: relative;
  z-index: -1;
}

nav ul li {
  display: inline;
}

/* nav img,
nav ul {
  vertical-align: middle;
  text-align: center;
  margin:0 auto;
  margin-left: 120px;
  padding: 50px 0px 0px 0px;
} */


.nav a {
  text-decoration: none;
  color:#F37A21;
  position: relative;
  font-family: brother-1816-printed, sans-serif;
  font-weight: 400;
  font-style: normal;
  margin-right: 100px;
  margin-top: 50px;

}

.nav a:hover{
  color: #88353F;
}

.nav a:vistied{
  color:#E9D4BF;
}

.nav ul li:hover {
  transition: all .2s ease-in-out;
  transform: scale(1.1);
}

/* Body styling */


/* contact page styling */
.contact h1 {
  font-family: zooja-pro,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #F37A21;
  font-size: 50px;

}

.contact h1::first-letter{
  color: #88353F;
}
.contact p {
  font-family: mortise, serif;
  font-weight: 400;
  font-style: normal;
  color: #88353F;
}


.contact p::first-letter{
  color: #F37A21;
  font-variant: small-caps;
  font-size: 30px;
}
/* index page styling */
.home h1,p {
  color: #E9D4BF;
  font-family: zooja-pro,sans-serif;
  font-weight: 100;
  font-style: normal;
  color: #E9D4BF;
  font-size: 65px;
  text-align: center;
  padding-top: 15px;

}
.home p{
  font-size: 20px;
  color: #F37A21;

}
.homephoto img{
  text-align: center;
  margin:0 auto;
  padding:0px;
  margin-bottom: 10px;
  margin-bottom: 10px;
  margin-left: 175px;
  display: block;
  display:inline;

}

.homephoto img:hover {
  transition: all .2s ease-in-out;
  transform: scale(1.1);
}
/* about page styling */
.about h1{
  font-family: zooja-pro,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #F37A21;
  font-size: 50px;
  text-align: center;

}
.about h2{
  font-weight: bold;
}

.about h2,ul{
  font-family: mortise, serif;
  font-weight: 400;
  font-style: normal;
  color: #88353F;
  text-align: center;
}

.about ul{
  list-style-type: none;
  color:#F37A21;
  position: relative;
  width: 400px;
  height: 200px;
  border: none;
  margin-left: 600px;
  margin-top: 65px;
  clear: left;
  text-align: left;
  font-size: 16px;
}

.happyearth{
  position: absolute;
  left: 300px;
  border: none;
  clear: right;
  margin-top: 120px;

}

.happyearth img:hover{
  animation: shake 0.5s;
  animation-iteration-count: infinite;

}
.happyearth figcaption {
  color: #88353F;
  margin-left: 68px;
}

@keyframes shake {
  0% { transform: translate(1px, 1px) rotate(0deg); }
  10% { transform: translate(-1px, -2px) rotate(-1deg); }
  20% { transform: translate(-3px, 0px) rotate(1deg); }
  30% { transform: translate(3px, 2px) rotate(0deg); }
  40% { transform: translate(1px, -1px) rotate(1deg); }
  50% { transform: translate(-1px, 2px) rotate(-1deg); }
  60% { transform: translate(-3px, 1px) rotate(0deg); }
  70% { transform: translate(3px, 1px) rotate(-1deg); }
  80% { transform: translate(-1px, -1px) rotate(1deg); }
  90% { transform: translate(1px, 2px) rotate(0deg); }
  100% { transform: translate(1px, -2px) rotate(-1deg); }
}
.aboutphoto{
  text-align: center;
  margin: auto;
  margin-top: 20px;


}
/* styling art page */
section.gallery img{
  width:200;


}


.gallery{
  margin-bottom: 0;
  font-family: zooja-pro,sans-serif;
  font-style: normal;
  color: #E9D4BF;
  font-size: 50px;
  text-align: center;


}

.gallery h2{
  text-shadow: 5px 10px #F5F5F5;
}
.top-rip {
  position: absolute;
}

.bottom-rip {
  bottom: 0;
  left: 0;
  position: fixed;
  text-align: center;
  width: 100%;

}


#bg{
  position: fixed;
  top: -50%;
  left: -50%;
  width: 200%;
  height: 200%;
}

#bg img {
  position: absolute;
  top:0;
  left:0;
  right:0;
  bottom: 0;
  margin: auto;
  min-width: 50%;
  min-height: 50%;
  opacity: 50%;
}

/* body {
  background-image: url('../images/concrete-wall.png');
  background-repeat: no-repeat;
} */

/* logo styling */
.logo {
  text-align: center;
  width: 100%;
  margin: 0;
}
.logo:hover {
  transition: all .2s ease-in-out;
  transform: scale(1.1);
}

/* contact form styling */
.container {
  max-width: 900px;
  margin: 0 auto;
  text-align: center;

}
.container p{
  font-size: 20px;
}
/*  contact form styling */
.contact-form {
  background-color: #EBE1D6;
  padding:20px;
  max-width: 500px;
  border-radius: 20px;
  color: white;
  font-family: mortise, serif;
  font-size: 30px;
  margin: 20px auto;
  text-align: left;
  box-shadow: 5px 10px #F5F5F5;
}
.reset input,
.submit input {
  background: #F37A21;
  color: white;
  padding: 5px 20px;
  display: inline;

}
.reset,
.submit {
  display:inline;
}
.input-section {
  margin-bottom: 10px;
}

input {
  padding: 5px 10px;
  border-radius: 3px;
}
textarea {
  font-family: sans-serif;
  padding: 10px 10px;
}
select {
  width: 185px;
  padding: 8px 0;
  border-radius: 4px;
}
/* footer info styling */
.infofooter {
  text-align: center;
  vertical-align: middle;
  margin-bottom: auto;

}
.left p{
  color: #88353F;
  font-size: 25px;
  position: relative;
  clear: right;
}

.infofooter img{
  max-width: 25px;
  text-align: center;
  clear: right;
  padding-top: 15px;
}
.right p{
  font-size: 25px;
  position: relative;
  color:#F37A21;
  clear: left;
}
.left p::first-letter {
  color: #F37A21;
}

